--- a/index.html
+++ b/index.html
@@ -1,178 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-emoji="robot"></title>
-  <link rel="stylesheet" href="css/style.css?v=1.0.3" />
-  <link rel="stylesheet" href="css/style-button.css?v=1.0.3" />
-  <style>
-    .langOption {
-      display: block;
-      width: 100%;
-      padding: 4px 8px;    /* less padding */
-      background: none;
-      border: none;
-      text-align: left;
-      cursor: pointer;
-      margin: 0;           /* no margin between */
-    }
-    #langMenu {
-      display: none;
-      position: absolute;
-      right: 0;
-      top: 100%;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-  </style>
-</head>
+  <script src="js/render.js?v=1.0.3"></script>
 <body>
-  <button class="topleftbutton" id="tokenButton" data-emoji="cloud"></button>
-  <div class="modal" id="tokenModal">
-    <div class="modal-content" id="tokenModalContent">
-      <h3 data-i18n="cloud"></h3>
-      <textarea
-        class="styled-textarea"
-        id="tokenInput"
-        rows="3"
-        data-i18n-placeholder="entertoken"
-      ></textarea>
-      <button onclick="saveToken()" data-emoji="save"></button>
-      <button onclick="deleteToken()" data-emoji="delete"></button>
-      <button class="cancel-btn" onclick="closeModal('tokenModal')" data-emoji="cancel"></button>
-    </div>
-  </div>
-
-  <div id="debugModal" class="modal">
-    <div class="modal-content">
-      <h3 data-i18n="loading"></h3>
-      <pre id="debugOutput" class="debug-text"></pre>
-      <button class="cancel-btn" onclick="closeModal('debugModal')" data-emoji="cancel"></button>
-    </div>
-  </div>
-
-  <div class="toprightcontainer">
-    <button class="clear-button" id="helpButton" data-emoji="help" onClick="openHelpModal('helptext')"></button>
-    <div style="position: relative;">
-      <button class="clear-button" id="langButton" data-emoji="lang"></button>
-      <div id="langMenu">
-        <button class="langOption" data-lang="en" data-emoji="us"></button>
-        <button class="langOption" data-lang="ch" data-emoji="cn"></button>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="helpModal">
-    <div class="modal-content">
-      <h3 data-i18n="help"></h3>
-      <pre id="helpText" class="help-text"></pre>
-      <button class="cancel-btn" onclick="closeModal('helpModal')" data-emoji="cancel"></button>
-    </div>
-  </div>
-
-  <div class="button-container">
-    <button class="big-btn" onclick="window.location.href='restaurant/index.html'">
-      <div class="emoji" data-emoji="restaurant"></div>
-    </button>
-    <button class="big-btn" onclick="window.location.href='drink/index.html'">
-      <div class="emoji" data-emoji="drink"></div>
-    </button>
-    <button class="big-btn" onclick="window.location.href='travel/index.html'">
-      <div class="emoji" data-emoji="travel"></div>
-    </button>
-    <button class="big-btn" onclick="window.location.href='entertainment/index.html'">
-      <div class="emoji" data-emoji="fun"></div>
-    </button>
-    <button class="big-btn" onclick="window.location.href='health/index.html'">
-      <div class="emoji" data-emoji="health"></div>
-    </button>
-    <button class="big-btn" onclick="window.location.href='pet/index.html'">
-      <div class="emoji" data-emoji="pet"></div>
-    </button>
-  </div>
-
-  <script src="js/cloud.js?v=1.0.3"></script>
-  <script src="js/form.js?v=1.0.3"></script>
-  <script src="js/util.js?v=1.0.3"></script>
-  <script src="js/modal.js?v=1.0.3"></script>
   <script>
-    // cloud token related
-    const tokenKey = 'google_token';
-    const tokenButton = document.getElementById('tokenButton');
-    const tokenModal = document.getElementById('tokenModal');
-    const tokenInput = document.getElementById('tokenInput');
-    tokenButton.addEventListener('click', () => {
-      const savedToken = localStorage.getItem(tokenKey);
-      tokenInput.value = savedToken || '';
-      tokenModal.style.display = 'flex';
-    });
-    async function saveToken() {
-      const token = tokenInput.value.trim();
-      if (token) {
-        showDebugModal();
-        const success = await verifyToken(token);
-        if (success){
-          localStorage.setItem(tokenKey, token);
-          console.log(translations[currentLang]['tokensuccess']);
-        } else{
-          console.log(translations[currentLang]['tokenfailure']);
-          return;
-        }
-      }
-      else {
-        localStorage.removeItem(tokenKey);
-      }
-      closeModal('tokenModal');
-    }
-    function deleteToken() {
-      tokenInput.value = '';
-    }
-
-    // fix mobile vertical viewport issue
-    setVh();
-    window.addEventListener('resize', setVh);
-    window.addEventListener('orientationchange', setVh);
-
     // translation
-    let translations = {};
-    let currentLang = 'en';
-    async function loadLang(lang) {
-      try {
-        const res = await fetch('lang.json?v=1.0.3');
-        // const res = await fetch('lang.json', {
-        //   cache: 'no-cache'
-        // });
-        if (!res.ok) {
-          throw new Error(`HTTP error ${res.status}`);
-        }
-
-        translations = await res.json();
-        currentLang = lang;
-        localStorage.setItem('lang', currentLang);
-        localStorage.setItem('translations', JSON.stringify(translations));
-        applyTranslations();
-      } catch (error) {
-        console.error("Error loading language file:", error);
-      }
-    }
-    const langButton = document.getElementById('langButton');
-    const langMenu = document.getElementById('langMenu');
-    langButton.addEventListener('click', () => {
-      langMenu.style.display = (langMenu.style.display === 'block') ? 'none' : 'block';
-    });
-    document.querySelectorAll('.langOption').forEach(button => {
-      button.addEventListener('click', (e) => {
-        const lang = e.target.dataset.lang;
-        loadLang(lang);
-        langMenu.style.display = 'none'; // close menu after selection
-      });
-    });
+    let state = {};
     window.addEventListener('DOMContentLoaded', () => {
-      const savedLang = localStorage.getItem('lang') || 'en'; // default to 'en'
-      loadLang(savedLang);
-      showHelpOnFirstVisit();
+      renderPage('home', state);
     });
   </script>
 </body>
