ok - render same index to all the pages + toggle column (update, add, delete)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     // translation
     let state = {};
     window.addEventListener('DOMContentLoaded', () => {
-      const lastPageKey = localStorage.getItem('lastPageKey') || 'home';
-      renderPage(lastPageKey, state);
+      // const lastPageKey = localStorage.getItem('lastPageKey') || 'home';
+      renderPage('home', state);
     });
   </script>
 </body>
