summary with filter (if available) + clean up state in function + fix aggregation for datetime local

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script src="js/render.js?v=1.1.2"></script>
+  <script src="js/render.js?v=1.1.3"></script>
 <body>
   <script>
     // translation
     let state = {};
     window.addEventListener('DOMContentLoaded', () => {
       // const lastPageKey = localStorage.getItem('lastPageKey') || 'home';
-      renderPage('home', state);
+      renderPage('home');
     });
   </script>
 </body>
